# joaodanil0.github.io

./: .gitignore  404.html  LICENSE  README.md  README.rst  index.html  mkdocs.yml  nav.yml  pyproject.toml  sitemap.xml  style.css
Android/HAL/AIDL/: index.html
Android/HAL/HIDL/: index.html
Android/HAL/HILD/: index.html
Android/boot.img/: index.html
Beaglebone/Inicio/: index.html
Beaglebone/U-boot/: index.html
Beaglebone/USB Serial/: index.html
Boards/Beaglebone/Inicio/: index.html
Boards/Beaglebone/U-boot/: index.html
Boards/Beaglebone/USB Serial/: index.html
Bootloader/VIM3/u-boot/: index.html
Bootloader/qemu/U-boot_qemu/: index.html
Documentação/Partições/GPT/: index.html
Documentação/mkdocs/: index.html
Documentação/mkdocs/mkdocs/: index.html
English/: index.html
Linguagens/Rust/Cap1/: index.html
Linguagens/Rust/Cap2/: index.html
Linguagens/Rust/Cap3/: index.html
Linguagens/Rust/Cap4/: index.html
Portugues/: index.html
Portugues/postagens/mkdocs/: index.html
RTOS/zephyr/zephyr/: index.html
bluetooth/broadcast/: index.html
css/: bootstrap.css  post.css  style.css
docs/: index.md  style.css
docs/Android/: boot.img.md
docs/Boards/Beaglebone/: Inicio.md  (+2 more)
docs/English/: index.md
docs/Portugues/: index.md
docs/bluetooth/: broadcast.md
js/: commom.js
overrides/partials/: comments.html
pages/: beacons.html
pages/beacons/: beacons.html
pages/commom/: footer.html  navbar.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/English/: index.html
site/Portugues/: index.html
(+103 files in other folders)
