[tool.poetry]
name = "documentations"
version = "0.1.0"
description = ""
authors = ["João Danilo <joaodanilo1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
pymdown-extensions = "^9.3"
mkdocs-material = "^8.2.9"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-glightbox = "^0.1.7"
mkdocs-enumerate-headings-plugin = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
